Fix overlapping title with radar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,6 +60,8 @@ li > a {
 .mouseover-title {
   position:absolute;
   color: slategrey;
+  
+  max-width: 150px;
 }
 
 .tech-label {
